<resources>
    <string name="app_name">FitnFine</string>
    <string name="address">Shop No. 2x, Building No. x, Ambad Link Rd, Shubham Park, Uttam Nagar, Nashik, Maharashtra 422010</string>
    <string name="phone">983434xxxx / 9852775xxxx</string>
    <string name="email">contactxx@fitnfinegym.com</string>
    <string name="website">www.fitandfine.com</string>
    <string name="time">6am to 9am / 6pm to 9pm</string>
    <string name="info">The FitnFine Gym started in 2012, when the first FitnFine Gym branch was set up in Mumbai. In the next few years this number grew, and today FitnFine Gym has cut out for itself 20 gyms in India with another 5 under construction and ready to start in this year.\n\t\tWith multiple awards for excellence under its belt including 2 awards from the Lions Club for the “Best Fitness Chain”, An award from the Images Beauty and wellness for the Most admired fitness chain of the year”, an award from Franchise India, 8 awards from Gold’s Gym India making  it a very eventful 14 years in the growth of the business. \n\t\tFitnFine Gym has bagged the most prestigious Gym Times ET award for ‘Excellence in Marketing 2013’ and ‘Excellence in Customer Service 2014’. </string>
</resources>
